--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-target
+.settings/
+*/settings/
+*/target/
+.classpath
+*.classpath
+*/bin/
+*.iml
+.idea/
+*.classpath
+*.component
+.component
+.project
+*.project
+*/.settings/
