--- a/paging/pom.xml
+++ b/paging/pom.xml
@@ -35,5 +35,26 @@
 	</dependencies>
 	<build>
 		<finalName>paging</finalName>
+		<plugins>
+	      <plugin>
+	          <groupId>org.mortbay.jetty</groupId>
+	          <artifactId>jetty-maven-plugin</artifactId>
+	          <version>8.1.9.v20130131</version>
+	          <configuration>
+	              <stopKey>stop</stopKey>
+	              <stopPort>6000</stopPort>
+	              <webAppConfig>
+	                  <contextPath>/oa</contextPath>
+	              </webAppConfig>
+	              <scanIntervalSeconds>4</scanIntervalSeconds>
+	              <connectors>
+	                  <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+	                      <port>8088</port>
+	                      <maxIdleTime>60000</maxIdleTime>
+	                  </connector>
+	              </connectors>
+	          </configuration>
+	      </plugin>
+	    </plugins>
 	</build>
 </project>
