--- a/pom.xml
+++ b/pom.xml
@@ -406,5 +406,6 @@
 		<module>utils</module>
 		<module>web</module>
 		<module>paging</module>
+		<module>oauthclient</module>
 	</modules>
 </project>
