--- a/core/src/main/profiles/dev/application.properties
+++ b/core/src/main/profiles/dev/application.properties
@@ -1,2 +1,8 @@
 FILE_TYPE=.xls
-
+#httpclient
+httpClient.maxTotal=200
+httpClient.defaultMaxPerRoute=50
+httpClient.connectTimeout=1000
+httpClient.connectionRequestTimeout=500
+httpClient.socketTimeout=10000
+httpClient.staleConnectionCheckEnabled=true
