--- a/pom.xml
+++ b/pom.xml
@@ -227,7 +227,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.7.0-rc1</version>
+			<version>2.9.9</version>
 		</dependency>
 
 		<dependency>
